WebContent/Examples/InValid/InvTemperatureSensor6.jsonld
{
  "description":"Invalid href because if base doesn't finish with /, hrefs should start with /",
  "@context": [
    "https://w3c.github.io/wot/w3c-wot-td-context.jsonld",
    "https://w3c.github.io/wot/w3c-wot-common-context.jsonld"
  ],
  "@type": [
    "Sensor"
  ],
  "name": "myTempSensor",
  "base": "coap:///www.example.com:5683/temp",
  "interaction": [
    {
      "@type": [
        "Property",
        "Temperature"
      ],
      "reference": "threshold",
      "name": "myTemp",
      "schema": {
        "type": "number"
      },
      "writable": false,
      "observable": true,
      "form": [
        {
          "href": "val",
          "mediaType": "application/json"
        }
      ]
    }
  ]
}